Corrigindo a palavra Column

--- a/Flexbox/justify-content.html
+++ b/Flexbox/justify-content.html
@@ -40,7 +40,7 @@
         justify-content: space-around;
     }
 
-    .colunm{
+    .column{
         flex-direction: column;
         min-height: 200px;
     }
@@ -88,7 +88,7 @@
     
     <h1>Colunm</h1>
     <h2>flex-start Column</h2>
-    <section class="container flex-start colunm">
+    <section class="container flex-start column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item3</div>
@@ -96,8 +96,8 @@
         <div class="item">5</div>
     </section>
 
-    <h2>flex-end Colunm</h2>
-    <section class="container flex-end colunm">
+    <h2>flex-end Column</h2>
+    <section class="container flex-end column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item3</div>
@@ -105,8 +105,8 @@
         <div class="item">5</div>
     </section>
 
-    <h2>flex-center colunm</h2>
-    <section class="container flex-center colunm">
+    <h2>flex-center column</h2>
+    <section class="container flex-center column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item3</div>
@@ -114,8 +114,8 @@
         <div class="item">5</div>
     </section>
 
-    <h2>Space-Between colunm</h2>
-    <section class="container space-between colunm">
+    <h2>Space-Between column</h2>
+    <section class="container space-between column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item3</div>
@@ -123,8 +123,8 @@
         <div class="item">5</div>
     </section>
 
-    <h2>Space-around colunm</h2>
-    <section class="container space-around colunm">
+    <h2>Space-around column</h2>
+    <section class="container space-around column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item3</div>
