--- a/Flexbox/exercício-rocketseat.html
+++ b/Flexbox/exercício-rocketseat.html
@@ -20,7 +20,7 @@
             background-color: gray;
         }
         main{
-            flex: 2;
+            flex: 1;
             background-color:#0044;
         }
     </style>
@@ -32,7 +32,7 @@
             Coluna esquerda
         </aside>
         <main>
-            coluna direira
+            coluna direita
         </main>
     </div>
 
