--- a/Flexbox/esxercicio-grid.html
+++ b/Flexbox/esxercicio-grid.html
@@ -70,6 +70,90 @@
             <p>Camisa feita de algodão com detalhes em azul claro</p>
             <a class="comprar" href="/">Comprar</a>
         </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Calça Jeans</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Calça feita de algodão com detalhes em azul claro</p>
+            <a class="comprar"href="/">Comprar</a>
+        </div>
+        <div class="item">
+            <h2>Camisa azul</h2>
+            <p class="preço">R$ 39 </p>
+            <p>Camisa feita de algodão com detalhes em azul claro</p>
+            <a class="comprar" href="/">Comprar</a>
+        </div>
     </div>
     
 </body>
