--- a/Projeto-Rocketseat/index.html
+++ b/Projeto-Rocketseat/index.html
@@ -8,13 +8,12 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="flex-container">
+    <div id="container">
         <img src="cristal-ball.svg" alt="Bola de Cristal">
         <h1>Vou revelar o seu destino!</h1>
         <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
         <input type="text" placeholder="Digite sua pergunta" id="">
-        <button class="botao">Fazer Pergunta</button>
-    </div>
-    
+        <button>Fazer Pergunta</button>
+    </div>    
 </body>
 </html>
