--- a/Projeto-Rocketseat/index.html
+++ b/Projeto-Rocketseat/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preveja seu Futuro</title>
+    <script type="text/javascript" src="index.js" defer=""></script>
     <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
     <div id="container">
         <img src="cristal-ball.svg" alt="Bola de Cristal">
         <h1>Vou revelar o seu destino!</h1>
         <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
-        <input type="text" placeholder="Digite sua pergunta" id="">
-        <button>Fazer Pergunta</button>
-    </div>    
+        <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" id="">
+        <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer Pergunta</button>
+    </div>
+    <h3 id="resposta"> 
+    </h3>
+    
 </body>
+
 </html>
