Finalizando o projeto do instagram

--- a/projeto-instagram/index.html
+++ b/projeto-instagram/index.html
@@ -18,7 +18,7 @@
                 <div class="perfil-foto">
                     <img src="Perfil-foto.png" alt="perfil do instagram">
                 </div>
-                <a href="#" class="login">Continue como rhawann</a>
+                <a href="#" class="login">Continue como rhawann?</a>
                 <a href="#" class="logout">Remover contar</a>
             </div>
             <div class="grupo">
@@ -28,17 +28,16 @@
                     ou
                     <span class="link-azul">Inscreva-se</span>
                 </p>
+            </div>   
                 <div class="app">
-                    <p class="app"> Baixe o app</p>
+                    <p class="get-app"> Baixe o aplicativo</p>  
                  <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
                  </div>
-                </div>
-            </div>
+            </div>   
         </div>
-
-    </div>
+ </div>
     
 </body>
 </html>
