--- a/Estudos-alura/jogo-adivinhacao.html
+++ b/Estudos-alura/jogo-adivinhacao.html
@@ -1,20 +1,81 @@
 <meta charset="UTF-8">
-<input type="text">
-<button> Em qual número eu estou pensando?</button>
+
+<input/>
+<button>Estou pensando em 3 números</button>
+
 <script>
-    segredo = Math.round(Math.random())*10;
-    input = document.querySelector("input");
-    
-    
-    function verifica(){
-        if(input.value == segredo){
-             alert("Você acertou!");
-        }else{
-             alert("Você errou!");
-            }
-        input.value ="";
-        input.focus();
-    }
-    var button = document.querySelector("button")
-    button.onclick = verifica;
+
+	function sorteia() {
+
+		return Math.round(Math.random() * 10);
+	}
+
+	function sorteiaNumeros(quantidade) {
+
+		var segredos = [];
+
+		var numero = 1;
+
+		while(numero <= quantidade) {
+
+			var numeroAleatorio = sorteia();
+
+			if(numeroAleatorio !== 0 ) {
+
+				var achou = false;
+
+				for(var posicao = 0; posicao < segredos.length; posicao++) {
+
+					if(segredos[posicao] == numeroAleatorio) {
+						achou = true;
+						break;
+					}
+				}
+
+				if(achou == false) {
+					segredos.push(numeroAleatorio);	
+					numero++;
+				} 
+			}
+		}
+
+		return segredos;
+	}
+
+	var segredos = sorteiaNumeros(3);
+
+	console.log(segredos);
+
+	var input = document.querySelector("input");
+	input.focus();	
+
+	function verifica() {
+
+		var achou = false;
+
+		for(var posicao = 0; posicao < segredos.length; posicao++) {
+
+			if(input.value == segredos[posicao]) {
+
+				alert("Você ACERTOU!");
+				achou = true;
+				break;
+			}
+		}
+
+		if(achou == false) {
+
+			alert("Você ERROU!");	
+		}
+		
+
+		input.value = "";
+		input.focus();		
+	}
+
+	var button = document.querySelector("button");
+
+	button.onclick = verifica;
+
+
 </script>
