--- a/Estudos-alura/jogo-alvo.html
+++ b/Estudos-alura/jogo-alvo.html
@@ -1,4 +1,11 @@
 <canvas width="600" height="400"></canvas>
+
+<style>
+    h1{
+        margin-left: 130px;
+    }
+</style>
+<h1>Acerte o centro do alvo!</h1>
 <script>
     var tela = document.querySelector('canvas');
     var pincel = tela.getContext('2d');
